<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="6dip"
    android:descendantFocusability="blocksDescendants"
    >


    <!--<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/abc_btn_check_to_on_mtrl_015" />

        <TextView
            android:id="@+id/tvAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/iv"
            android:text="45" />

        <TextView
            android:id="@+id/tvName"
            android:singleLine="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/tvAge"
            android:ellipsize="end"
            android:text="DummyDummyDummyDummyDummyDummyDummyDummyDummyDummy" />
    </RelativeLayout>
-->

    <RelativeLayout
        style="@style/filler">
        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Name"
            android:layout_alignParentLeft="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:maxWidth="@dimen/nameSize"

            />
        <ImageButton
            android:src="@drawable/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Delete"
            android:id="@+id/deletor"
            android:focusable="false"
            android:layout_alignParentRight="true"
            />
        <TextView
            android:id="@+id/tvAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/Age"
            android:layout_toLeftOf="@id/deletor"
            android:layout_toRightOf="@id/tvName"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:layout_weight="5"/>
        <TextView
            android:id="@+id/tvHieght"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Height"
            android:layout_weight="5"/>
    </LinearLayout>


</LinearLayout>